--- a/lost.html
+++ b/lost.html
@@ -3,8 +3,23 @@
 <head>
   <title>Lost Items - Bravehearts Lost & Found</title>
   <link rel="stylesheet" type="text/css" href="lost.css">
+  <style>
+    body { font-family: Arial, sans-serif; background:#f2f2f2; margin:0; padding:0;}
+    .video-background { position:fixed; top:0; left:0; width:100%; height:100%; z-index:-1; overflow:hidden; }
+    .video-background video { width:100%; height:100%; object-fit:cover; }
+    .card { background:white; max-width:600px; margin:50px auto; padding:20px; border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.2);}
+    h2 { text-align:center; color:#13007d; }
+    label { display:block; margin-top:12px; font-weight:bold; }
+    input, textarea { width:100%; padding:8px; margin-top:4px; border-radius:6px; border:1px solid #ccc; }
+    .row { display:flex; gap:10px; }
+    .row > div { flex:1; }
+    button { padding:12px 20px; margin-top:15px; border:none; border-radius:8px; background:#13007d; color:white; font-weight:bold; cursor:pointer; }
+    .camera-container { margin-top:15px; text-align:center; }
+    #snapshot { display:none; }
+    .preview img { max-width:220px; border:3px solid #13007d; border-radius:8px; margin-top:10px; }
+    #summary { text-align:left; margin-top:20px; }
+  </style>
 </head>
-<body>
 <body>
 
 <div class="video-background">
@@ -61,12 +76,13 @@
     <button type="submit">Send Report</button>
   </form>
 
-      <div id="summary" style="display:none; margin-top:20px; text-align:left;"></div>
-    <div style="display:flex; justify-content:center; gap:15px; margin-top:10px;">
-      <button id="submitAgain" style="display:none; padding:12px 20px; border-radius:8px; border:none; background:#13007d; color:#fff; font-weight:bold; cursor:pointer;">Submit Another Report</button>
-      <button id="goToLostReport" style="display:none; padding:12px 20px; border-radius:8px; border:none; background:#13007d; color:#fff; font-weight:bold; cursor:pointer;">View All Reports</button>
-    </div>
+  <div id="summary" style="display:none;"></div>
+
+  <div style="display:flex; justify-content:center; gap:15px; margin-top:10px;">
+    <button id="submitAgain" style="display:none;">Submit Another Report</button>
+    <button id="viewReports" style="display:none;">View All Reports</button>
   </div>
+</div>
 
 <script>
 const form = document.getElementById('lostForm');
@@ -138,13 +154,6 @@ viewReports.addEventListener('click', () => window.location.href = 'lostreport.h
 
 </body>
 </html>
-
-
-
-
-
-
-
 
 
 
